--- a/lib/config.ini
+++ b/lib/config.ini
@@ -1,5 +1,5 @@
 [config]
-sdk_version = MELI-RUBY-SDK-1.0.0
+sdk_version = MELI-PYTHON-SDK-1.0.0
 api_root_url = https://api.mercadolibre.com
 auth_url = https://auth.mercadolibre.com/authorization
 oauth_url = /oauth/token
