Changed default sll version to TLSv1 as SSLv3 was deprecated

--- a/lib/config.ini
+++ b/lib/config.ini
@@ -3,5 +3,5 @@ sdk_version = MELI-PYTHON-SDK-1.0.0
 api_root_url = https://api.mercadolibre.com
 auth_url = https://auth.mercadolibre.com/authorization
 oauth_url = /oauth/token
-ssl_version = PROTOCOL_SSLv3
+ssl_version = PROTOCOL_TLSv1
 
