--- a/lib/config.ini
+++ b/lib/config.ini
@@ -3,6 +3,8 @@ sdk_version = MELI-PYTHON-SDK-1.0.1
 api_root_url = https://api.mercadolibre.com
 auth_url = https://auth.mercadolivre.com.br
 oauth_url = /oauth/token
+ssl_version = PROTOCOL_TLSv1
+
 
 # Set the auth_url according to your country
 
@@ -19,5 +21,3 @@ oauth_url = /oauth/token
 #MPE https://auth.mercadolibre.com.pe // Peru
 #MPT https://auth.mercadolibre.com.pt // Prtugal
 #MRD https://auth.mercadolibre.com.do // Dominicana
-
-
