Modified config file to avoid changin it manually

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/python-sdk.iml
+/.idea
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -15,7 +17,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+
 lib64/
 parts/
 sdist/
