--- a/lib/config.ini
+++ b/lib/config.ini
@@ -1,7 +1,7 @@
 [config]
 sdk_version = MELI-PYTHON-SDK-1.0.1
 api_root_url = https://api.mercadolibre.com
-auth_url = https://auth.mercadolivre.com.br
+auth_url = https://auth.mercadolibre.com.ar
 oauth_url = /oauth/token
 ssl_version = PROTOCOL_TLSv1
 
