--- a/lib/config.ini
+++ b/lib/config.ini
@@ -21,4 +21,4 @@ ssl_version = PROTOCOL_TLSv1
 #MPE https://auth.mercadolibre.com.pe // Peru
 #MPT https://auth.mercadolibre.com.pt // Prtugal
 #MRD https://auth.mercadolibre.com.do // Dominicana
-
+#CBT https://global-selling.mercadolibre.com // CBT
